maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:36: error: expected class or object definition
def isDirectionFree(dir:Direction){
^PledgeMaze:58: error: Unmatched closing brace '}' ignored here
}
^